tests/fixtures/invalid/pow_bool_bool_set.py
# Cannot call pow() with Bool, Bool, Set[int]
x = pow(True, True, {1, 2, 3})
